--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,12 @@
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0 auto;
 }
 
+nav {
+  width: 100%;
+}
 nav .nav {
   display: flex;
   justify-content: space-between;
@@ -19,7 +23,7 @@ nav .nav .nav_menu {
   justify-content: space-between;
   align-items: center;
 }
-nav .nav .nav_menu a {
+nav .nav .nav_menu p {
   display: flex;
   align-items: center;
   width: 556px;
@@ -33,13 +37,21 @@ nav .nav .nav_menu a {
   font-weight: 400;
 }
 @media screen and (max-width: 768px) {
-  nav .nav .nav_menu {
-    flex-wrap: nowrap;
+  nav {
+    flex: 1 1 200px;
+  }
+  nav .nav .nav_menu p {
+    flex-wrap: wrap;
   }
 }
 
-header .header {
+.container {
   max-width: 1200px;
+  padding: 0px 10px;
+  margin: 0 auto;
+}
+
+header .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -86,11 +98,8 @@ header .header .header_btns a {
   letter-spacing: 0.71px;
   margin-left: 40px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   header {
-    justify-content: center;
-    align-items: center;
-    padding: 65px;
     flex-wrap: wrap;
   }
   header .header {
@@ -118,30 +127,161 @@ header .header .header_btns a {
   }
 }
 
-section {
-  display: flex;
+main {
+  margin-top: 281px;
 }
-section .section {
-  max-width: 1200px;
-  height: 334px;
+main .top_section {
+  align-items: center;
+}
+main .top_section .section_top {
+  margin-top: 281px;
+}
+main .top_section .section_top h1 {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 540px;
+  margin-right: 541px;
+  width: 119px;
+  font-weight: 400;
+  letter-spacing: 0.82px;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+main .top_section .section_img {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 250px;
+  margin-left: 250px;
+  margin-top: 39px;
+  gap: 90px;
+}
+@media screen and (max-width: 1024px) {
+  main .top_section .section_img {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+main .clinicali_proven {
+  display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
-  margin-left: 600px;
+  margin-top: 250px;
 }
-section .section .section_top {
-  display: flex;
+main .clinicali_proven .clinicali_proven1 {
   align-items: center;
+  gap: 50px;
 }
-section .section .section_top h1 {
-  align-items: center;
-  width: 119px;
-  height: 20px;
+main .clinicali_proven .clinicali_proven1 h1 {
+  display: block;
+  width: 221px;
+  font-size: 18px;
+  line-height: 27px;
   font-weight: 400;
+  letter-spacing: 0.99px;
+  text-transform: uppercase;
+  color: #000000;
 }
-section .section .section_img {
+main .clinicali_proven .clinicali_proven1 h2 {
+  display: block;
+  width: 138px;
+  height: 65px;
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 65px;
+  letter-spacing: 0.6px;
+}
+main .clinicali_proven .clinicali_proven1 p {
+  width: 400px;
+  height: 162px;
+  font-size: 18px;
+  line-height: 27px;
+  letter-spacing: 0.36px;
+  color: #000000;
+}
+main .clinicali_proven .clinicali_proven1 .btns {
+  margin-top: 50px;
+}
+main .clinicali_proven .clinicali_proven1 .btns a {
+  font-family: Roboto;
+  width: 147px;
+  height: 47px;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  letter-spacing: 0.71px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #FFFFFF;
+  background: #000000;
+  padding: 15px 30px 15px 30px;
+}
+main .clinicali_proven .proven .img {
+  width: 600px;
+  height: 600px;
+}
+main .wrapper_parent {
+  position: relative;
+  max-width: 1200px;
+  background: #F7F5F0;
+  margin-top: 45px;
+}
+main .wrapper_parent .parent {
+  width: auto;
+  height: 100%;
+  margin-left: 100px;
+}
+main .wrapper_parent .child {
+  position: absolute;
+  left: 569px;
+  top: 247px;
+}
+main .wrapper_parent .child svg {
+  z-index: 1;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+main .mit_yale {
+  font-family: Roboto;
+  margin-top: 260px;
+}
+main .mit_yale .mit_yale_content {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 110px;
+}
+main .mit_yale .mit_yale_content h1 {
+  width: 812px;
+  height: 39px;
+  font-size: 30px;
+  line-height: 39px;
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: 0.6px;
+  color: #000000;
+}
+main .mit_yale .mit_yale_content h4 {
+  width: 444px;
+  height: 23px;
+  font-size: 15px;
+  line-height: 22.5px;
+  letter-spacing: 0.82px;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+}
+main .mit_yale .mit_yale_content .mit_yale_items .mit_yale_item h2 {
+  width: 76px;
+  font-size: 54px;
+  line-height: 70px;
+  text-align: center;
+  letter-spacing: 2.97px;
+  text-transform: uppercase;
+  margin-left: 224px;
+}
+main .mit_yale .mit_yale_content .mit_yale_items .mit_yale_item span {
+  display: flex;
+  font-size: 32px;
 }/*# sourceMappingURL=style.css.map */
