--- a/css/style.scss
+++ b/css/style.scss
@@ -25,6 +25,7 @@ $mobileS: 480px;
 
 
 nav {
+    width: 100%;
     .nav {
         display: flex;
         justify-content: space-between;
@@ -37,7 +38,7 @@ nav {
             align-items: center;
 
 
-            a {
+            p {
                 display: flex;
                 align-items: center;
                 width: 556px;
@@ -55,12 +56,14 @@ nav {
     }
 
     @media screen and (max-width:$mobileL) {
-
-
+        flex: 1 1 200px;
 
         .nav {
             .nav_menu {
-                flex-wrap: nowrap;
+                p{
+                    flex-wrap: wrap;
+                }
+                
 
                 
             }
@@ -150,10 +153,8 @@ header {
 
     }
 
-    @media screen and (max-width:$mobileL) {
-        justify-content: center;
-        align-items: center;
-        padding: 65px;
+    @media screen and (max-width:$tablet) {
+        
         flex-wrap: wrap;
 
         .header {
@@ -196,36 +197,209 @@ header {
 
     }
 }
-section{
-    
-    display: flex;
 
-    .section{
-        max-width: 1200px;
-        height: 334px;
-        display: flex;
+
+main{
+    margin-top: 281px;
+
+    .top_section{
         
-        justify-content: space-between;
         align-items: center;
         
-        
         .section_top{
-            display: flex;
-            align-items: center;
+            margin-top: 281px;
             h1{
-                align-items: center;
-                width: 119px;
-                height: 20px;
-                font-weight: 400;
-                
+                display: flex;
+               align-items: center;
+               justify-content: space-between;
+               margin-left: 540px;
+               margin-right: 541px;
+               width: 119px;
+               font-weight: 400;
+               letter-spacing: 0.82px;
+               text-transform: uppercase;
+               font-size: 15px;
             }
+            
+
         }
+
         .section_img{
             display: flex;
-            justify-content: space-between;
             align-items: center;
+            justify-content: space-between;
+            margin-right: 250px;
+            margin-left: 250px;
+            margin-top: 39px;
             gap: 90px;
+
+            @media screen and (max-width:$tablet){
+                align-items: center;
+                display: flex;
+                flex-wrap: wrap;
+            }
+            
+
+        }
+    }
+
+    .clinicali_proven{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 250px;
+        .clinicali_proven1{
+            align-items: center;
+            gap: 50px;
+            
+            h1{
+                display: block;
+                width: 221px;
+                font-size: 18px;
+                line-height: 27px;
+                font-weight: 400;
+                letter-spacing: 0.99px;
+                text-transform: uppercase;
+                color: $black1;
+                
+            }
+            h2{
+                display: block;
+                width: 138px;
+                height: 65px;
+                font-weight: 400;
+                font-size: 54px;
+                line-height: 65px;
+                letter-spacing: 0.6px;
+            }
+
+            p{
+                width: 400px;
+                height: 162px;
+                font-size: 18px;
+                line-height: 27px;
+                letter-spacing: 0.36px;
+                color: $black1;
+                
+            }
+            .btns{
+                margin-top: 50px;
+                a{
+                    font-family: Roboto;
+                    width: 147px;
+                    height: 47px;
+                    font-weight: 400;
+                    font-size: 13px;
+                    line-height: 16px;
+                    letter-spacing: 0.71px;
+                    text-transform: uppercase;
+                    text-decoration: none;
+                    color: $white1;
+                    background: $black1;
+                    padding: 15px 30px 15px 30px;
+    
+                }  
+            }
+            
+        }
+        .proven{
+            .img{
+                width: 600px;
+                height: 600px;
+            }
             
         }
     }
+
+    .wrapper_parent{
+        position: relative;
+        max-width: 1200px;
+        background: #F7F5F0;
+        margin-top: 45px;
+        .parent{
+            
+            width: auto;
+            height: 100%;
+            margin-left: 100px;
+
+        }
+        .child{
+            position: absolute;
+            left: 569px;
+            top: 247px;
+            
+            svg{
+                
+                z-index: 1;
+                border: 1px solid rgba(0, 0, 0, 0.1);
+                
+            }
+        }
+    }
+
+    .mit_yale{
+        
+        font-family: Roboto;
+        margin-top: 260px;
+        .mit_yale_content{
+            
+            display: flex;
+            
+            flex-direction: column;
+            align-items: center;
+            
+            h1{
+                width: 812px;
+                height: 39px;
+                font-size: 30px;
+                line-height: 39px;
+                
+                font-weight: 400;
+                text-align: center;
+                letter-spacing: 0.6px;
+                color: $black1;
+
+            }
+            h4{
+                width: 444px;
+                height: 23px;
+                font-size: 15px;
+                line-height: 22.5px;
+                letter-spacing: 0.82px;
+                font-weight: 400;
+                text-align: center;
+                text-transform: uppercase;
+
+            }
+            .mit_yale_items{
+                
+                
+                .mit_yale_item{
+
+                    h2{
+                        
+                        width: 76px;
+                        font-size: 54px;
+                        line-height: 70px;
+                        text-align: center;
+                        letter-spacing: 2.97px;
+                        text-transform: uppercase;
+                        margin-left: 224px;
+                        
+                    }
+                    span{
+                        display: flex;
+                        font-size: 32px;
+                    }
+                    p{
+                        
+                    }
+
+                }
+            }
+        }
+    }
+
+    
 }
