--- a/css/style.css
+++ b/css/style.css
@@ -202,24 +202,20 @@ main .clinicali_proven .clinicali_proven1 p {
   letter-spacing: 0.36px;
   color: #000000;
 }
-main .clinicali_proven .clinicali_proven1 .btns {
-  margin-top: 50px;
-}
-main .clinicali_proven .clinicali_proven1 .btns a {
-  font-family: Roboto;
-  width: 147px;
-  height: 47px;
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
-  letter-spacing: 0.71px;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #FFFFFF;
+main .clinicali_proven .clinicali_proven1 button {
+  font-size: 16px;
   background: #000000;
-  padding: 15px 30px 15px 30px;
+  color: #FFFFFF;
+  text-align: center;
+  letter-spacing: 0.715px;
+  text-transform: uppercase;
+  line-height: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  padding: 15px 30px 16px 30px;
+  margin-top: 64px;
 }
-main .clinicali_proven .proven .img {
+main .clinicali_proven .img {
   width: 600px;
   height: 600px;
 }
