--- a/css/style.scss
+++ b/css/style.scss
@@ -39,7 +39,7 @@ nav {
             align-items: center;
 
 
-            p {
+            a{
                 display: flex;
                 align-items: center;
                 width: 556px;
@@ -473,6 +473,104 @@ main {
            
             padding: 15px 30px 16px 30px;
             text-decoration: none;
+        }
+    }
+
+    .all_natures{
+        
+        
+        margin-left: 100px;
+        margin: 210px;
+        font-family: roboto;
+        .natures{
+            margin-left: 100px;
+            
+            h4{
+                font-size: 15px;
+                font-weight: 400;
+                line-height: 22px;
+                letter-spacing: 0.825px;
+                text-transform: uppercase;
+                color: $black1;
+                
+                
+            }
+            h1{
+                font-size: 54px;
+                line-height: 64.8px;
+                letter-spacing: 0.6px;
+                color: $black1;
+                font-weight: 400;
+                width: 451px;
+                height: 130px;
+    
+            }
+        }
+        
+        .all{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            
+            .items{
+                
+                .item{
+                    margin-top: 68px;
+                    margin-left: 200px;
+                    
+                    h2{
+                        font-size: 24px;
+                        font-weight: 400;
+                        line-height: 31px;
+                        letter-spacing: 0.6px;
+                        color: $black1;
+                    }
+                    p{
+                        width: 381px;
+                        height: 108px;
+                        font-size: 17px;
+                        font-weight: 400;
+                        line-height: 27px;
+                        font-style: normal;
+                        letter-spacing: 0.36px;
+                        color: $black1;
+                        
+                    }
+                }
+                
+            }
+            .img{
+                
+                
+                img{
+                 margin-bottom: 273px;   
+                    
+                }
+            }
+        }
+    }
+
+    .img_block{
+        
+        
+        a{
+            display: block;
+            width: 481px;
+            height: 36px;
+            font-size: 27px;
+            font-weight: 400;
+            line-height: 35px;
+            text-align: center;
+            letter-spacing: 0.6px;
+            color: $black1;
+            margin-left: 350px;
+            margin-bottom: 29px;
+        }
+        .items{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        
         }
     }
 
